--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongoose": "^7.1.0",
@@ -23,6 +24,6 @@
     "nodemon": "^2.0.22"
   },
   "engines": {
-      "node": ">=14.20.1"
-    }
+    "node": ">=14.20.1"
+  }
 }
